# transer-graph

./: .copier-answers.yml  .cz.toml  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
docker/: docker-compose.yml
docker/transfer_graph/: Dockerfile
docs/: conf.py
docs/source/: 0_abstract.md  1_use_case.md  6_technical_setup_guide.rst
docs/source/plots/: plot.py
notebooks/: Example Plotting.ipynb
reports/: README.md
reports/Python/: output.html  report_template.ipynb
src/tests/: test_run.py
src/transfer_graph/: __init__.py  cli.py
src/transfer_graph/conf/: main.yaml
src/transfer_scraper/: scrapy.cfg  transfers.json
src/transfer_scraper/transfer_scraper/: items.py  middlewares.py  pipelines.py  settings.py
src/transfer_scraper/transfer_scraper/spiders/: transfers.py
